<resources>
    <string name="app_name">YuGiOh-Memorise</string>
    <string name="solo_mode">Solo Mode</string>
    <string name="multiplayer">Multiplayer Mode</string>
    <string name="settings">Settings</string>
    <string name="score">Score</string>
    <string name="credits">Credits</string>
    <string name="creditsdecsription">Coded by :\nWill\n&amp;\nJonny\nDev Mobile\nProject</string>
    <string name="back">Back</string>
    <string name="description_logo">Just a logo of the apps game</string>
    <string name="resetscore">Reset Score</string>
    <string name="cardskin">Cards Skins</string>
    <string name="darkmode">Theme Sombre</string>
    <string name="quitter">Quitter</string>
    <string name="restart">Restart</string>
</resources>